fix scrollbar style

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -98,24 +98,19 @@
 
 /* SCROLLBAR */
 
-* {
-    scrollbar-width: thin;
-    scrollbar-color: var(--gray-400);
-}
-
 *::-webkit-scrollbar {
     width: 8px;
 }
 
 *::-webkit-scrollbar-track {
-    background: var(--gray-200);
+    background: var(--gray-100);
 }
 
 *::-webkit-scrollbar-thumb {
     background-color: var(--gray-400);
-    border-radius: 8px;
-    border-top: 4px solid var(--gray-200);
-    border-bottom: 4px solid var(--gray-200);
+    border-radius: 12px;
+    border-top: 4px solid var(--gray-400);
+    border-bottom: 4px solid var(--gray-400);
 }
 
 /* TRANSITION */
@@ -1230,6 +1225,8 @@ svg {
     left: 0;
     width: 100%;
     margin-top: 0.5rem;
+    max-height: 25rem;
+    overflow-x: auto;
     border: var(--border);
     border-radius: var(--border-radius);
     background-color: var(--white);
